--- a/eas.json
+++ b/eas.json
@@ -13,7 +13,10 @@
       }
     },
     "preview": {
-      "distribution": "internal"
+        "android": {
+            "buildType": "apk",
+            "gradleCommand": ":app:assembleRelease"
+        }
     },
     "production": {}
   },
