--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "@expo/webpack-config": "^0.17.0",
+    "@zinbu/cards-game-launcher": "npm:@ZinBu/cards-game-launcher@^1.0.5",
     "expo": "~46.0.21",
     "expo-av": "12.0.4",
     "expo-splash-screen": "~0.16.2",
